<resources>
    <string name="app_name">MemoryStack</string>
    <string name="no_post_permission">App has no file read permission. Can\'t read from gallery</string>
    <string name="req_post_permission_reason">App requires file read permission. Could you allow the permission?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="default_notification_channel_id" translatable="false">0</string>
    <string name="request_permission">Request Permission</string>
    <string name="text_login">Login</string>
    <string name="text_back">Back</string>
    <string name="text_signin">Sign in</string>
    <string name="text_next">Next</string>
    <string name="hint_name">Username</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="text_post_count">Post</string>
    <string name="text_follower">Follower</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_post">Post</string>
    <string name="text_save">Save</string>
    <string name="text_logout">Logout</string>
    <string name="text_home">Home</string>
    <string name="text_follow_list">Follow</string>
    <string name="text_post_page">Post</string>
    <string name="text_profile">Profile</string>
    <string name="text_warning">Warning</string>
    <string name="text_reason">Reason</string>
    <string name="text_allow">Allow</string>
    <string name="text_deny">Deny</string>
    <string name="text_follow_btn">Follow</string>
    <string name="text_unfollow_btn">Unfollow</string>
    <string name="label_login">Login</string>
    <string name="label_signin">Sign in</string>
    <string name="label_post">Posting</string>
    <string name="label_gallery">Select Image</string>
    <string name="label_profile">Edit Profile</string>
    <string name="label_follow">Profile</string>
    <string name="content_post">New Post!</string>
    <string name="label_post_data">Post</string>
    <string name="text_network_deny">Please try again after connecting the network</string>
    <string name="text_network_warning">Network Error</string>
    <string name="text_confirm">Confirm</string>
    <string name="error_email_format">Incorrect Email format</string>
    <string name="error_email_conflict">This email is already exists</string>
    <string name="error_email_blank">Please enter email</string>
    <string name="error_name_blank">Please enter name</string>
    <string name="error_nickname_conflict">This Nickname is already exists</string>
    <string name="error_nickname_blank">Please enter nickname</string>
    <string name="error_phone_format">Incorrect Phone number format</string>
    <string name="error_phone_conflict">This phone number is already exists</string>
    <string name="error_phone_blank">Please enter phone number</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_password_blank">Please enter password</string>
    <string name="error_login_fail">Please check email and password</string>
</resources>